@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX 50calc-gentoo.el 941 RMD160 0d5aeaea22d9c8b2f72a4ca34c4819a35d466afd SHA1 db743d8e94c1d1a6a5719a8bb052e09c6c41a382 SHA256 484f556390fe0fce6e18bb86fcd54f19685673a08d916e40e5d7a336380a4150
+AUX 50calc-gentoo.el 906 RMD160 2bc992f0aeacb9d375b2891d0091d52f4f55f6ea SHA1 45e9080f32e1b4dea1f161a1b54078c5280d3a49 SHA256 3e6d661b92db4b2a9382d28a08c798fcd8a5e5f1f17edf76f8a0e59841400fd9
 AUX calc-2.02f-emacs-21.patch 8642 RMD160 1915e1f5f571b92d9cc67ced09085b7a862155e5 SHA1 50c38fbbfa3112bded1ace696fcce942dfdc7d90 SHA256 9c5fd5b410a43c0586a46b69c8f81e4f1ee372291bf76e9c37067bd6f4b68b59
 AUX calc-2.02f-info-dir.patch 301 RMD160 56a619a319f036ccbbc5fc8f21a8380b807cf68e SHA1 3f8e5242b93a598bcb453ac3c09e678df99a9299 SHA256 cac6ee1a91324f2001c1d991bb7b9bba24ae6eae36ee554fbbc9e252fdbabbaf
 DIST calc-2.02f.tar.gz 831865 RMD160 4ca65723de4a5c3f8ebb3c61191185b48ddb1009 SHA1 1a1d54fb90725aacaf1c9308a94be4b813ac4880 SHA256 774231cdf06999d3a7cbfae69a1afe469497a6bc7d2e6cb90de922dd3ae5e67d
-EBUILD calc-2.02f.ebuild 1229 RMD160 0e440db6214470137a88a38339086e46aa45502e SHA1 42e0dfd08be7f9c5b584af1e480894c68e80d506 SHA256 150f7f25dcf115180983f51e11ae877d1218abf00a5985506ae8c9778bb328c2
-MISC ChangeLog 1391 RMD160 0adf7007ff4ca12cc73079e494e7ee4bd1c30dee SHA1 72d4356cbbffd42aabf18b1c2a20ac6edd7fdc6d SHA256 6f8f40e9b8fe1262e382776d375fd3d71812d447ef523e3c4f4dc63e04100e1e
+EBUILD calc-2.02f.ebuild 1242 RMD160 4d2964000229d36c94b784da3916202e8c63a628 SHA1 5beaf7b3ad5b20deb131e9f7b8e708ebaffee083 SHA256 bef5368ae45a2e3f5959e71a5f5a00b59b4dff7b95d8fece388b5a4f61e1c928
+MISC ChangeLog 1494 RMD160 2e752a51909f3d3c88c850cbbadd1df380fbac72 SHA1 cd4fe0b7e203deac46b963579d22735608568344 SHA256 62e0545154d46cf0685262f3282649a8c562b5549f9ade0fd17b953e4d646b54
 MISC metadata.xml 1515 RMD160 b82c1d081fecab8d22e6303b719d8003660a4d79 SHA1 9890c29254cdf634d4ebac0856521068dd2c2173 SHA256 185ba60afb4cb0b53abbd53268adf38bd73c9ff58b74dbecfea11fd0542e411e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.9 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAknP5YIACgkQOeoy/oIi7uyOCwCaAvRhfA4geig4x7HJYPqZ65mM
-8AAAoKLW9KfJXbPXhgz8rBaBxEmpzwfH
-=dG8+
+iEYEARECAAYFAkwl84wACgkQOeoy/oIi7uxDCwCePjC6SqSm0ALBmCOXH1ab8rN9
+/pgAnj5+H/TsKGfBzCz+N2mkmz8PROq5
+=aqqx
 -----END PGP SIGNATURE-----
