@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/calc
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.7 2009/03/29 21:16:30 ulm Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/calc/Attic/ChangeLog,v 1.8 2010/06/26 12:31:38 ulm Exp $
+
+  26 Jun 2010; Ulrich Mueller <ulm@gentoo.org> calc-2.02f.ebuild:
+  Don't inherit versionator.eclass.
 
   29 Mar 2009; Ulrich Mueller <ulm@gentoo.org> calc-2.02f.ebuild:
   Use autopatch feature of elisp.eclass.
